--- a/src/uLearn.Web/uLearn.Web.csproj
+++ b/src/uLearn.Web/uLearn.Web.csproj
@@ -230,6 +230,10 @@
     <Compile Include="Migrations\201408050611273_AddQuizzes.Designer.cs">
       <DependentUpon>201408050611273_AddQuizzes.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201408050909459_DeletedRequriedFieldsInQuizzes.cs" />
+    <Compile Include="Migrations\201408050909459_DeletedRequriedFieldsInQuizzes.Designer.cs">
+      <DependentUpon>201408050909459_DeletedRequriedFieldsInQuizzes.cs</DependentUpon>
+    </Compile>
     <Compile Include="Models\CourseManager_should.cs" />
     <EmbeddedResource Include="Courses\**\*.*">
       <Visible>false</Visible>
@@ -300,6 +304,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201408050611273_AddQuizzes.resx">
       <DependentUpon>201408050611273_AddQuizzes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201408050909459_DeletedRequriedFieldsInQuizzes.resx">
+      <DependentUpon>201408050909459_DeletedRequriedFieldsInQuizzes.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
