--- a/src/courses/BasicProgramming/BasicProgramming.csproj
+++ b/src/courses/BasicProgramming/BasicProgramming.csproj
@@ -52,14 +52,16 @@
     <Compile Include="Slides\U01_Basics\S031-Conversion.cs" />
     <Compile Include="Slides\U01_Basics\S040-StringsVideo.cs" />
     <Compile Include="Slides\U01_Basics\S041-Strings.cs" />
-    <Compile Include="Slides\U01_Basics\S05-ParseAndToString.cs" />
+    <Compile Include="Slides\U01_Basics\S042-ParseAndToString.cs" />
     <Compile Include="Slides\U01_Basics\S060-OperationsVideo.cs" />
     <Compile Include="Slides\U01_Basics\S061-Operations.cs" />
-    <Compile Include="Slides\U01_Basics\S07-Methods.cs" />
+    <Compile Include="Slides\U01_Basics\S080-LocalAndGlobalVarsVideo.cs" />
+    <Compile Include="Slides\U01_Basics\S070-MethodsVideo.cs" />
+    <Compile Include="Slides\U01_Basics\S071-Methods.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Slides\U01_Basics\S08-Vision.cs" />
-    <Compile Include="Slides\U01_Basics\S09-DefaultValues.cs" />
-    <Compile Include="Slides\U01_Basics\S10-IntelliSense.cs" />
+    <Compile Include="Slides\U01_Basics\S081-Scope.cs" />
+    <Compile Include="Slides\U01_Basics\S082-DefaultValues.cs" />
+    <Compile Include="Slides\U01_Basics\S083-IntelliSense.cs" />
     <Compile Include="Slides\U01_Basics\_HelloWorld.cs" />
     <Compile Include="Slides\U02_Mistakes\S01-MissedUsings.cs" />
     <Compile Include="Slides\U02_Mistakes\S02-ErrorInTtypecasting.cs" />
