hint-likes + some beautiful things in analytics

--- a/src/uLearn.Web/uLearn.Web.csproj
+++ b/src/uLearn.Web/uLearn.Web.csproj
@@ -234,6 +234,10 @@
     <Compile Include="Migrations\201408050909459_DeletedRequriedFieldsInQuizzes.Designer.cs">
       <DependentUpon>201408050909459_DeletedRequriedFieldsInQuizzes.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201408070554397_AddHintsLike.cs" />
+    <Compile Include="Migrations\201408070554397_AddHintsLike.Designer.cs">
+      <DependentUpon>201408070554397_AddHintsLike.cs</DependentUpon>
+    </Compile>
     <Compile Include="Models\CourseManager_should.cs" />
     <EmbeddedResource Include="Courses\**\*.*">
       <Visible>false</Visible>
@@ -308,6 +312,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201408050909459_DeletedRequriedFieldsInQuizzes.resx">
       <DependentUpon>201408050909459_DeletedRequriedFieldsInQuizzes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201408070554397_AddHintsLike.resx">
+      <DependentUpon>201408070554397_AddHintsLike.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
