--- a/src/uLearn.Web/uLearn.Web.csproj
+++ b/src/uLearn.Web/uLearn.Web.csproj
@@ -702,6 +702,9 @@
     <Content Include="Views\Analytics\PersonalStatistics.cshtml" />
     <Content Include="Views\Course\_SolutionControl.cshtml" />
     <Content Include="Views\Course\_Quiz.cshtml" />
+    <Content Include="Views\Course\_ChoiceBlock.cshtml" />
+    <Content Include="Views\Course\_FillInBlock.cshtml" />
+    <Content Include="Views\Course\_TrueFalseBlock.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
