some slide in 3th unit + HintController

--- a/src/courses/BasicProgramming/BasicProgramming.csproj
+++ b/src/courses/BasicProgramming/BasicProgramming.csproj
@@ -66,7 +66,7 @@
     <Compile Include="Slides\U01_Basics\S000-Help.cs" />
     <Compile Include="Slides\U01_Basics\_HelloWorld.cs" />
     <Content Include="Slides\U02_Mistakes\S011-MissedUsings.xml" />
-    <Compile Include="Slides\U02_Mistakes\DRY.cs" />
+    <Compile Include="Slides\U02_Mistakes\S080-DRY.cs" />
     <Compile Include="Slides\U02_Mistakes\S060-Experiments.cs" />
     <Compile Include="Slides\U02_Mistakes\S010-CompilationMistakeVideo.cs" />
     <Compile Include="Slides\U02_Mistakes\S020-ErrorInTypeCasting.cs" />
@@ -76,17 +76,22 @@
     <Compile Include="Slides\U02_Mistakes\S041-Division.cs" />
     <Compile Include="Slides\U02_Mistakes\S050-DebugVideo.cs" />
     <Compile Include="Slides\U02_Mistakes\S070-Style.cs" />
-    <Compile Include="Slides\U02_Mistakes\S080-ConstantAndEnum.cs" />
-    <Compile Include="Slides\U02_Mistakes\S090-MethodRefactoring.cs" />
+    <Compile Include="Slides\U02_Mistakes\S090-ConstantAndEnum.cs" />
+    <Compile Include="Slides\U02_Mistakes\S100-MethodRefactoring.cs" />
     <Compile Include="Slides\U02_Mistakes\_DivisionByZero.cs" />
     <Compile Include="Slides\U02_Mistakes\_MissedUsings.cs" />
     <Compile Include="Slides\U02_Mistakes\_TypeCastingMistaces.cs" />
     <Compile Include="Slides\U02_Mistakes\_Typo.cs" />
-    <Compile Include="Slides\U03_Cycles\S01-BooleanVariablesAndComparison.cs" />
-    <Compile Include="Slides\U03_Cycles\S02-LogicalExpressions.cs" />
-    <Compile Include="Slides\U03_Cycles\S03-IfOperator.cs" />
-    <Compile Include="Slides\U03_Cycles\S04-IfReturn.cs" />
-    <Compile Include="Slides\U03_Cycles\S05-ExcessIf.cs" />
+    <Compile Include="Slides\U03_Cycles\S011-BooleanVariablesAndComparison.cs" />
+    <Compile Include="Slides\U03_Cycles\S010-LogicalTypeVideo.cs" />
+    <Compile Include="Slides\U03_Cycles\S021-IfElseTask.cs" />
+    <Compile Include="Slides\U03_Cycles\S020-IfElseVideo.cs" />
+    <Compile Include="Slides\U03_Cycles\S022-IfElseTask2.cs" />
+    <Compile Include="Slides\U03_Cycles\S023-IfElseTask3.cs" />
+    <Compile Include="Slides\U03_Cycles\S030-IfReturnVideo.cs" />
+    <Compile Include="Slides\U03_Cycles\S031-IfReturn.cs" />
+    <Compile Include="Slides\U03_Cycles\S032-ExcessIf.cs" />
+    <Compile Include="Slides\U03_Cycles\S040-WhileVideo.cs" />
     <Compile Include="Slides\U03_Cycles\S06-While.cs" />
     <Compile Include="Slides\U03_Cycles\S07-Break.cs" />
     <Compile Include="Slides\U03_Cycles\S08-Continue.cs" />
