--- a/src/uLearn/uLearn.csproj
+++ b/src/uLearn/uLearn.csproj
@@ -156,6 +156,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Compile>
     <Compile Include="SlideAttribute.cs" />
+    <Compile Include="TocModel.cs" />
     <Compile Include="Urls.cs" />
     <Compile Include="UsersStatsPageModel.cs" />
   </ItemGroup>
