--- a/src/courses/BasicProgramming/BasicProgramming.csproj
+++ b/src/courses/BasicProgramming/BasicProgramming.csproj
@@ -43,61 +43,59 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Program.cs" />
-    <Compile Include="Slides\U01_Basics\S010-HelloWorldVideo.cs" />
-    <Compile Include="Slides\U01_Basics\S012-InformationSources.cs" />
-    <Compile Include="Slides\U01_Basics\S011-FirstStep.cs" />
-    <Compile Include="Slides\U01_Basics\S020-TypesVideo.cs" />
-    <Compile Include="Slides\U01_Basics\S021-Types.cs" />
-    <Compile Include="Slides\U01_Basics\S030-ConversionVideo.cs" />
-    <Compile Include="Slides\U01_Basics\S031-Conversion2.cs" />
-    <Compile Include="Slides\U01_Basics\S031-Conversion.cs" />
-    <Compile Include="Slides\U01_Basics\S040-StringsVideo.cs" />
-    <Compile Include="Slides\U01_Basics\S071-Strings.cs" />
-    <Compile Include="Slides\U01_Basics\S042-ParseAndToString.cs" />
-    <Compile Include="Slides\U01_Basics\S060-OperationsVideo.cs" />
-    <Compile Include="Slides\U01_Basics\S061-Operations.cs" />
-    <Compile Include="Slides\U01_Basics\S080-LocalAndGlobalVarsVideo.cs" />
-    <Compile Include="Slides\U01_Basics\S070-MethodsVideo.cs" />
-    <Compile Include="Slides\U01_Basics\S072-Methods.cs" />
+    <Compile Include="Slides\U01_Basics\S010_HelloWorldVideo.cs" />
+    <Compile Include="Slides\U01_Basics\S012_InformationSources.cs" />
+    <Compile Include="Slides\U01_Basics\S011_FirstStep.cs" />
+    <Compile Include="Slides\U01_Basics\S020_TypesVideo.cs" />
+    <Compile Include="Slides\U01_Basics\S020_TypesExercise.cs" />
+    <Compile Include="Slides\U01_Basics\S030_ConversionVideo.cs" />
+    <Compile Include="Slides\U01_Basics\S03_Conversion2.cs" />
+    <Compile Include="Slides\U01_Basics\S03_Conversion.cs" />
+    <Compile Include="Slides\U01_Basics\S04_StringsVideo.cs" />
+    <Compile Include="Slides\U01_Basics\S071_Strings.cs" />
+    <Compile Include="Slides\U01_Basics\S05_ParseAndToString.cs" />
+    <Compile Include="Slides\U01_Basics\S06_OperationsVideo.cs" />
+    <Compile Include="Slides\U01_Basics\S06_Operations.cs" />
+    <Compile Include="Slides\U01_Basics\S08_LocalAndGlobalVarsVideo.cs" />
+    <Compile Include="Slides\U01_Basics\S07_MethodsVideo.cs" />
+    <Compile Include="Slides\U01_Basics\S07_Methods.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Content Include="Slides\U01_Basics\S081-Scope.xml">
       <SubType>Designer</SubType>
     </Content>
-    <Compile Include="Slides\U01_Basics\S083-IntelliSense.cs" />
-    <Compile Include="Slides\U01_Basics\S000-Help.cs" />
+    <Compile Include="Slides\U01_Basics\S10_IntelliSense.cs" />
+    <Compile Include="Slides\U01_Basics\S000_HelpSlide.cs" />
     <Compile Include="Slides\U01_Basics\_HelloWorld.cs" />
     <Content Include="Slides\U02_Mistakes\S011-MissedUsings.xml" />
-    <Compile Include="Slides\U02_Mistakes\S080-DRY.cs" />
-    <Compile Include="Slides\U02_Mistakes\S060-Experiments.cs" />
-    <Compile Include="Slides\U02_Mistakes\S010-CompilationMistakeVideo.cs" />
-    <Compile Include="Slides\U02_Mistakes\S020-ErrorInTypeCasting.cs" />
-    <Compile Include="Slides\U02_Mistakes\S030-TypoSlide.cs" />
-    <Compile Include="Slides\U02_Mistakes\S031-Typo.cs" />
-    <Compile Include="Slides\U02_Mistakes\S040-DivisionByZeroVideo.cs" />
-    <Compile Include="Slides\U02_Mistakes\S041-Division.cs" />
-    <Compile Include="Slides\U02_Mistakes\S050-DebugVideo.cs" />
-    <Compile Include="Slides\U02_Mistakes\S070-Style.cs" />
-    <Compile Include="Slides\U02_Mistakes\S090-ConstantAndEnum.cs" />
-    <Compile Include="Slides\U02_Mistakes\S100-MethodRefactoring.cs" />
+    <Compile Include="Slides\U02_Mistakes\Dry.cs" />
+    <Compile Include="Slides\U02_Mistakes\Experiments.cs" />
+    <Compile Include="Slides\U02_Mistakes\S010_CompilationMistakeVideo.cs" />
+    <Compile Include="Slides\U02_Mistakes\S031_Typo.cs" />
+    <Compile Include="Slides\U02_Mistakes\S040_RuntimeExceptionsVideo.cs" />
+    <Compile Include="Slides\U02_Mistakes\S04_Division.cs" />
+    <Compile Include="Slides\U02_Mistakes\S050_DebugVideo.cs" />
+    <Compile Include="Slides\U02_Mistakes\S070_Style.cs" />
+    <Compile Include="Slides\U02_Mistakes\S080_ConstantAndEnum.cs" />
+    <Compile Include="Slides\U02_Mistakes\S090_MethodRefactoring.cs" />
     <Compile Include="Slides\U02_Mistakes\_DivisionByZero.cs" />
     <Compile Include="Slides\U02_Mistakes\_MissedUsings.cs" />
     <Compile Include="Slides\U02_Mistakes\_TypeCastingMistaces.cs" />
     <Compile Include="Slides\U02_Mistakes\_Typo.cs" />
-    <Compile Include="Slides\U03_Cycles\S011-BooleanVariablesAndComparison.cs" />
-    <Compile Include="Slides\U03_Cycles\S010-LogicalTypeVideo.cs" />
-    <Compile Include="Slides\U03_Cycles\S021-IfElseTask.cs" />
-    <Compile Include="Slides\U03_Cycles\S020-IfElseVideo.cs" />
-    <Compile Include="Slides\U03_Cycles\S022-IfElseTask2.cs" />
-    <Compile Include="Slides\U03_Cycles\S023-IfElseTask3.cs" />
-    <Compile Include="Slides\U03_Cycles\S030-IfReturnVideo.cs" />
-    <Compile Include="Slides\U03_Cycles\S031-IfReturn.cs" />
-    <Compile Include="Slides\U03_Cycles\S032-ExcessIf.cs" />
-    <Compile Include="Slides\U03_Cycles\S040-WhileVideo.cs" />
-    <Compile Include="Slides\U03_Cycles\S06-While.cs" />
-    <Compile Include="Slides\U03_Cycles\S07-Break.cs" />
-    <Compile Include="Slides\U03_Cycles\S08-Continue.cs" />
-    <Compile Include="Slides\U03_Cycles\S09-For.cs" />
-    <Compile Include="Slides\U03_Cycles\S10-KtulhuFor.cs" />
+    <Compile Include="Slides\U03_Cycles\S01_BooleanVariablesAndComparison.cs" />
+    <Compile Include="Slides\U03_Cycles\S010_LogicalTypeVideo.cs" />
+    <Compile Include="Slides\U03_Cycles\S02_LogicalExpressions.cs" />
+    <Compile Include="Slides\U03_Cycles\S020_IfElse.cs" />
+    <Compile Include="Slides\U03_Cycles\S022_IfElseTask2.cs" />
+    <Compile Include="Slides\U03_Cycles\S03_IfOperator.cs" />
+    <Compile Include="Slides\U03_Cycles\S030_IfReturnVideo.cs" />
+    <Compile Include="Slides\U03_Cycles\S04_IfReturn.cs" />
+    <Compile Include="Slides\U03_Cycles\S05_ExcessIf.cs" />
+    <Compile Include="Slides\U03_Cycles\S040_WhileVideo.cs" />
+    <Compile Include="Slides\U03_Cycles\S06_While.cs" />
+    <Compile Include="Slides\U03_Cycles\S07_Break.cs" />
+    <Compile Include="Slides\U03_Cycles\S08_Continue.cs" />
+    <Compile Include="Slides\U03_Cycles\S09_For.cs" />
+    <Compile Include="Slides\U03_Cycles\S10_KtulhuFor.cs" />
     <Compile Include="Slides_Tests.cs" />
   </ItemGroup>
   <ItemGroup>
