--- a/src/uLearn.Web/Web.config
+++ b/src/uLearn.Web/Web.config
@@ -49,6 +49,7 @@
 		<validation validateIntegratedModeConfiguration="false" />
 		<staticContent>
 			<mimeMap fileExtension="woff" mimeType="application/font-woff" />
+            <mimeMap fileExtension="odp" mimeType="application/vnd.oasis.opendocument.presentation" />
 		</staticContent>
 	</system.webServer>
 	<runtime>
